--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,12 @@
 {
-    "rewrites": [{ "source": "/(.*)", "destination": "/home.html" }]
+    "version":2,
+    "builds":[{
+        "src": "./index.py",
+        "use":"vercel/python"
+    }],
+    "routes":[{
+        "src": "/(.*)",
+        "dest": "/"
+    }],
+    "rewrites": [{ "source": "/(.*)", "destination": "/index.py" }]
 }
